# Singularity-Network

./: .Dockerignore  .coverage  .gitignore  .pre-commit-config.yaml  Application.py  Block.py  Chain.py  Dockerfile  PrivateKey.pem  PublicKey.pem  README.md  Transaction.py  Utils.py  Wallet.py  config.py  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  settings.toml
BlockChain/: Account_model.py  AdditionalTypes.py  Application.py  Block.py  Block_chooser.py  Chain.py  Config.py  Exceptions.py  Message.py  Node.py  NodeAPI.py  Trans_api.py  Transaction.py  Utils.py  __init__.py
BlockChain/Consensus/: Lot.py  Proof_of_stake.py
BlockChain/P2P/: Message.py  PeerDiscoveryHandler.py  SocketCommunication.py  SocketConnector.py  __init__.py  p2p_network.py
BlockChain/Wallet/: Wallet.py
Keys/: PrivateKey.pem  PublicKey.pem
SingularityCoin/: asgi.py  settings.py  urls.py  wsgi.py
Wallet/: Wallet.py
data/: blockchain_data.json
frontend/: views.py
frontend/templates/main/: index.html  soon.html
scripts/: Trans_api.py
tests/: .coverage  TestChain.py  TestNodeAPI.py  TestPoS.py  TestWallet.py  request.json
